monitoria/mac323/4-2-35/grades/Leonardo-Benicio_191458_assignsubmission_file_8536110-WE.4.2.35.txt

COMPILATION ERROR

CORREÇÃO AUTOMÁTICA
Quantidade de Testes | Veredito
0 | OK
0 | Tempo de Execução Excedido
0 | Resposta Errada
0 | Erro de Execução
CORREÇÃO MANUAL
Não consegui compilar, parece que você tenta usar um construtor da classe Digraph que recebe um inteiro e ele não existe.

make: '/home/bcc/victorsenam/private/usp/monitoria/mac323/4-2-35/tester/checker/checker' is up to date.
CoreVertices.java:66: error: no suitable constructor found for Digraph(In)
        Digraph G = new Digraph(in);
                    ^
    constructor Digraph.Digraph(int) is not applicable
      (argument mismatch; In cannot be converted to int)
    constructor Digraph.Digraph(edu.princeton.cs.algs4.In) is not applicable
      (argument mismatch; In cannot be converted to edu.princeton.cs.algs4.In)
    constructor Digraph.Digraph(Digraph) is not applicable
      (argument mismatch; In cannot be converted to Digraph)
KosarajuSharirSCC.java:176: error: no suitable constructor found for Digraph(In)
        Digraph G = new Digraph(in);
                    ^
    constructor Digraph.Digraph(int) is not applicable
      (argument mismatch; In cannot be converted to int)
    constructor Digraph.Digraph(edu.princeton.cs.algs4.In) is not applicable
      (argument mismatch; In cannot be converted to edu.princeton.cs.algs4.In)
    constructor Digraph.Digraph(Digraph) is not applicable
      (argument mismatch; In cannot be converted to Digraph)
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
=========== TENTANDO COMPILAR DE NOVO (imports no começo do código) ==============
CoreVertices.java:67: error: no suitable constructor found for Digraph(In)
        Digraph G = new Digraph(in);
                    ^
    constructor Digraph.Digraph(int) is not applicable
      (argument mismatch; In cannot be converted to int)
    constructor Digraph.Digraph(edu.princeton.cs.algs4.In) is not applicable
      (argument mismatch; In cannot be converted to edu.princeton.cs.algs4.In)
    constructor Digraph.Digraph(Digraph) is not applicable
      (argument mismatch; In cannot be converted to Digraph)
KosarajuSharirSCC.java:177: error: no suitable constructor found for Digraph(In)
        Digraph G = new Digraph(in);
                    ^
    constructor Digraph.Digraph(int) is not applicable
      (argument mismatch; In cannot be converted to int)
    constructor Digraph.Digraph(edu.princeton.cs.algs4.In) is not applicable
      (argument mismatch; In cannot be converted to edu.princeton.cs.algs4.In)
    constructor Digraph.Digraph(Digraph) is not applicable
      (argument mismatch; In cannot be converted to Digraph)
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
